Added buttons to the Working hours counter widget

--- a/languages/en-US/Settings/WidgetsManagement.json
+++ b/languages/en-US/Settings/WidgetsManagement.json
@@ -39,7 +39,11 @@
     "PLL_CURRENT_DAY": "Current day",
     "PLL_CURRENT_WEEK": "Current week",
     "PLL_CURRENT_MONTH": "Current month",
-    "PLL_CURRENT_YEAR": "Current year",
+    "PLL_FIFTEEN_MINUTES": "15 minutes",
+    "PLL_THIRTY_MINUTES": "30 minutes",
+    "PLL_FORTY_MINUTES": "40 minutes",
+    "PLL_SIXTY_MINUTES": "60 minutes",
+    "PLL_NINETY_MINUTES": "90 minutes",
     "LBL_SAVE_DASHBOARD": "Save dashboard",
     "LBL_NAME_DASHBOARD": "Dashboard name",
     "LBL_FIELD_DATE": "Date field",
