--- a/languages/en-US/Settings/WidgetsManagement.json
+++ b/languages/en-US/Settings/WidgetsManagement.json
@@ -50,7 +50,8 @@
     "LBL_SKIP_YEAR": "Skip the year",
     "LBL_SKIP_YEAR_DESC": "Skip the year of the event by only considering the month and day.",
     "LBL_WIDGET_NAME": "Widget name",
-    "BTN_NEXT": "Next"
+    "BTN_NEXT": "Next",
+    "LBL_DEFAULT_TIME": "Default call end time"
   },
   "js": {
     "JS_BLOCK_ADDED": "Block has been added successfully",
