--- a/languages/en-US/OSSTimeControl.json
+++ b/languages/en-US/OSSTimeControl.json
@@ -102,7 +102,8 @@
     "LBL_ALL_TIME_CONTROL": "All users total working time",
     "LBL_START_TIME_COUNTER": "Start time counter",
     "LBL_STOP_TIME_COUNTER": "Stop time counter",
-    "LBL_RESET_TIME_COUNTER": "Reset time counter"
+    "LBL_RESET_TIME_COUNTER": "Reset time counter",
+    "LBL_ADD_MINUTES": "Add %s minutes to work time"
   },
   "js": {
     "MSG_ERROR_NUMBER": "Allowed characters: [0-9]",
