Added missing translation

--- a/languages/en-US/Settings/WidgetsManagement.json
+++ b/languages/en-US/Settings/WidgetsManagement.json
@@ -39,6 +39,7 @@
     "PLL_CURRENT_DAY": "Current day",
     "PLL_CURRENT_WEEK": "Current week",
     "PLL_CURRENT_MONTH": "Current month",
+    "PLL_CURRENT_YEAR": "Current year",
     "PLL_FIFTEEN_MINUTES": "15 minutes",
     "PLL_THIRTY_MINUTES": "30 minutes",
     "PLL_FORTY_MINUTES": "40 minutes",
