--- a/languages/en-US/Settings/WidgetsManagement.json
+++ b/languages/en-US/Settings/WidgetsManagement.json
@@ -40,11 +40,6 @@
     "PLL_CURRENT_WEEK": "Current week",
     "PLL_CURRENT_MONTH": "Current month",
     "PLL_CURRENT_YEAR": "Current year",
-    "PLL_FIFTEEN_MINUTES": "15 minutes",
-    "PLL_THIRTY_MINUTES": "30 minutes",
-    "PLL_FORTY_MINUTES": "40 minutes",
-    "PLL_SIXTY_MINUTES": "60 minutes",
-    "PLL_NINETY_MINUTES": "90 minutes",
     "LBL_SAVE_DASHBOARD": "Save dashboard",
     "LBL_NAME_DASHBOARD": "Dashboard name",
     "LBL_FIELD_DATE": "Date field",
@@ -52,7 +47,7 @@
     "LBL_SKIP_YEAR_DESC": "Skip the year of the event by only considering the month and day.",
     "LBL_WIDGET_NAME": "Widget name",
     "BTN_NEXT": "Next",
-    "LBL_DEFAULT_TIME": "Default call end time"
+    "LBL_DEFAULT_TIME": "Default call end time (min)"
   },
   "js": {
     "JS_BLOCK_ADDED": "Block has been added successfully",
