--- a/install/languages/pl-PL/Settings/YetiForce.json
+++ b/install/languages/pl-PL/Settings/YetiForce.json
@@ -20,7 +20,7 @@
     "LBL_CAT_SUPPORT": "Wsparcie",
     "LBL_CAT_ADDONS": "Dodatki",
     "LBL_CAT_INTEGRATIONS": "Integracje",
-    "LBL_CAT_RECORD_COLLECTORS": "Kolektor rekordów",
+    "LBL_CAT_RECORD_COLLECTORS": "Kolektory rekordów",
     "LBL_CAT_PARTNER_SOLUTIONS": "Rozwiązania partnerów",
     "LBL_DOWNLOAD_LANG": "Pobierz język",
     "LBL_DOWNLOAD": "Pobierz",
@@ -152,8 +152,8 @@
     "LBL_SHOP_YETIFORCERCVATIFYEU_DESC": "Pobieranie danych firm z bazy VATify.eu, która również zawiera aktualny status płatnika VAT\n\nKraj: Lista na stronie dostawcy: https://www.vatify.eu/coverage.html \nDostawca: Vatify\nModuły: Kontrahenci, Leady, Dostawcy, Partnerzy, Konkurencja \nAutouzupełnianie danych w rekordzie: Tak\nDodatkowa opłata za dostęp do bazy danych: Nie\nRejestracja konta: Tak",
     "LBL_SHOP_YETIFORCEINSTALLPORTALINCLOUD_INTRO": "YetiForce Portal w chmurze z licencją Webservice Premium",
     "LBL_SHOP_YETIFORCEINSTALLPORTALINCLOUD_DESC": "YetiForce Portal w chmurze z licencją Webservice Premium to kompleksowa usługa zapewniająca użytkownikom dostęp do Portalu YetiForce znajdującego się w naszej niezwykle wydajnej chmurze. \nSubskrypcja tego pakietu obejmuje również licencję YetiForce Webservice Premium, niezbędną do prawidłowego działania portalu.\n\n",
-    "LBL_SHOP_YETIFORCEWAPROERP_INTRO": "",
-    "LBL_SHOP_YETIFORCEWAPROERP_DESC": "",
+    "LBL_SHOP_YETIFORCEWAPROERP_INTRO": "Integracja YetiForce i Asseco Wapro ERP synchronizuje dane klientów między tymi systemami.",
+    "LBL_SHOP_YETIFORCEWAPROERP_DESC": "The integration between YetiForce and Asseco Wapro ERP guarantees fast and convenient two-way data synchronization, which allows for even more effective customer management in CRM.\n\nThe list of synchronized modules includes:\n- Departments/Company (read only)\n- Company bank accounts (read only)\n- Accounts (read only)\n- Contacts (read only)\n- Products (read only)\n- Invoices (read only)\n- Correction invoices (read only)",
     "LBL_SHOP_YETIFORCERCDKCVR_INTRO": "Pobieranie danych o duńskich i norweskich firmach z duńskiej bazy przedsiębiorstw (CVR)",
     "LBL_SHOP_YETIFORCERCDKCVR_DESC": "Pobieranie danych o duńskich i norweskich firmach przez CVR API z bazy Duńskiego centralnego rejestru przedsiębiorstw (CVR)\n\nKraj: Dania, Norwegia\nDostawca: CVR https://cvrapi.dk/ \nModuły: Kontrahenci, Leady, Dostawcy, Partnerzy, Konkurencja\nAutouzupełnianie danych w rekordzie: Tak\nDodatkowa opłata za dostęp do bazy danych: Nie\nRejestracja konta: Tak",
     "LBL_SHOP_YETIFORCERCNORTHDATA_INTRO": "Pobieranie danych firm z bazy North Data",
