Added grouping of entries in advanced blocks and improved configuration of advanced blocks

--- a/languages/en-US/_Base.json
+++ b/languages/en-US/_Base.json
@@ -980,6 +980,9 @@
     "LBL_ENTER_SEARCHED_ADDRESS": "Enter the address to search",
     "Email Opt Out": "Email opt out",
     "LBL_SIGN_IN": "Sign in",
+    "LBL_INV_ADD_BLOCK": "Add block",
+    "LBL_INV_GROUP_LABEL": "Block name",
+    "LBL_INV_ENTER_BLOCK_NAME": "Enter a block name",
     "LBL_TOTAL_PRICE": "Net",
     "LBL_ROW_COMMENT": "Description",
     "LBL_SELECT_DISCOUNT": "Select discount",
