--- a/languages/en-US/Settings/WidgetsManagement.json
+++ b/languages/en-US/Settings/WidgetsManagement.json
@@ -57,6 +57,7 @@
     "JS_CUSTOM_BLOCK_DELETED": "Block has been deleted successfully",
     "JS_WIDGET_ADDED": "Widget has been added successfully",
     "JS_FIELD_EMPTY": "The field cannot be empty",
-    "JS_FILTERS_AVAILABLE": "Filters available"
+    "JS_FILTERS_AVAILABLE": "Filters available",
+    "JS_SELECT_AT_LEAST_ONE_WIDGET": "Select at least one widget"
   }
 }
