Integration with PBX has been rebuilt

--- a/languages/en-US/Settings/PBX.json
+++ b/languages/en-US/Settings/PBX.json
@@ -11,7 +11,9 @@
     "LBL_PASSWORD": "Password",
     "LBL_SECRET_KEY": "Secret Key",
     "LBL_OUTBOUND_CONTEXT": "Outbound context",
-    "LBL_HTTP_LISTENER_PORT": "HTTP listener port"
+    "LBL_HTTP_LISTENER_PORT": "HTTP listener port",
+    "LBL_PBX_DEFAULT": "Default",
+    "LBL_PBX_BASE": "Base (default in browser)"
   },
   "js": {
     "JS_SAVE_SUCCESS": "Changes saved"
