--- a/languages/en-US/Calendar.json
+++ b/languages/en-US/Calendar.json
@@ -193,8 +193,8 @@
     "LBL_DATES_SELECTED_HOLIDAYS_CONFIRM": "Selected dates include holidays. Do you want to save?",
     "LBL_THIRTY_MINUTES": "30 minutes",
     "LBL_ONE_DAY": "1 day",
-    "LBL_SEVEN_DAY": "7 days",
-    "LBL_THIRTY_DAY": "30 days"
+    "LBL_SEVEN_DAYS": "7 days",
+    "LBL_THIRTY_DAYS": "30 days"
   },
   "js": {
     "JS_CALENDAR_VIEW_ADDED_SUCCESSFULLY": "Calendar view added successfully",
