--- a/languages/en-US/Settings/Workflows.json
+++ b/languages/en-US/Settings/Workflows.json
@@ -269,7 +269,9 @@
     "LBL_SET_WORKFLOW_BEFORE": "Set workflow before",
     "LBL_SOURCE_MODULE": "Source module",
     "LBL_ONE_TO_MANY_RELATIONS": "One to many relations",
-    "LBL_MANY_TO_MANY_RELATIONS": "Many to many relations"
+    "LBL_MANY_TO_MANY_RELATIONS": "Many to many relations",
+    "LBL_ALL_ATTACHMENTS": "all attachments",
+    "LBL_LATEST_ATTACHMENTS": "latest attachments"
   },
   "js": {
     "JS_SAME_FIELDS_SELECTED_MORE_THAN_ONCE": "Same fields selected more than once",
