--- a/languages/en-US/Settings/MailSmtp.json
+++ b/languages/en-US/Settings/MailSmtp.json
@@ -41,5 +41,8 @@
     "LBL_INDIVIDUAL_DELIVERY_INFO": "Emails will be sent individually for each recipient",
     "LBL_UNSUBSCRIBE_INFO": "The List-Unsubscribe header is an optional email header you can add to your messages. It allows subscribers to see an unsubscribe button they can click if they would like to automatically stop receiving your email. The list of parameters that will be placed in the header in angle brackets, e.g. < ... >\nexample: mailto:newsletter@yetiforce.com >>> <mailto:newsletter@yetiforce.com>",
     "LBL_OPTIONS_INFO": "Exemplary additional parameters (Json):\r\n {\r\n\"ssl\": {\r\n\"verify_peer\":false,\r\n\"verify_peer_name\";:false,\r\n\";allow_self_signed\";:true\r\n   }\r\n}"
+  },
+  "js": {
+    "JS_SAVE_SUCCESS": "Changes saved"
   }
 }
