--- a/languages/en-US/Settings/Mail.json
+++ b/languages/en-US/Settings/Mail.json
@@ -1,7 +1,5 @@
 {
   "php": {
-    "LBL_AUTOLOGIN": "Mail – Auto Login",
-    "LBL_AUTOLOGIN_DESCRIPTION": "Configuration of auto login for the Mailbox module",
     "LBL_MAIL_GENERAL_CONFIGURATION": "Mail – Configuration",
     "LBL_MAIL_GENERAL_CONFIGURATION_DESCRIPTION": "General configuration of the Mail module",
     "LBL_RC_USER": "User Email Account",
@@ -39,6 +37,26 @@
     "LBL_TO": "To",
     "LBL_EMAILS_TO_SEND_DESCRIPTION": "List of emails to send. Sending email messages takes place in cron.",
     "LBL_MAIL_QUEUE_PAGE_TITLE": "Emails to send",
-    "LBL_EMAIL_WAS_SENT": "Email has been sent, preview unavailable."
+    "LBL_EMAIL_WAS_SENT": "Email has been sent, preview unavailable.",
+    "LBL_TIME_CHECKING_MAIL": "Number of unread messages refresh frequency [sec]",
+    "LBL_TIME_CHECKING_MAIL_DESC": "The refresh rate in seconds for the number of unread messages. The frequency cannot be too low, as it will slow down the application.",
+    "LBL_MAIL_SCANNER": "Mail scanner",
+    "BL_SCANNER_NOTIFICATION": "Notifications",
+    "FL_SCANNER_EMAIL_FOR_NOTIFICATION": "E-mail",
+    "LBL_SCANNER_EMAIL_FOR_NOTIFICATION_DESC": "E-mail address to which the notification about the timeout of the mail scanner action will be sent.\n The option depends on one of the cron jobs.",
+    "FL_SCANNER_TIME_FOR_NOTIFICATION": "Time limit [min]",
+    "LBL_SCANNER_TIME_FOR_NOTIFICATION_DESC": "Time after which the notification about the protracted email account scanning process will be sent. The option depends on one of the cron jobs.",
+    "BL_SCANNER_BASIC": "Basic configuration",
+    "FL_SCANNER_LIMIT": "Limit",
+    "LBL_SCANNER_LIMIT_DESC": "Number of scanned e-mails in a single process.",
+    "FL_SCANNER_DEACTIVATION_TIME": "Timeout for deactivation account [h]",
+    "LBL_SCANNER_DEACTIVATION_TIME_DESC": "In case of problems with access to the e-mail account, it will be deactivated after the set number of hours.",
+    "FL_SCANNER_FLAG_SEEN": "Mark as seen",
+    "LBL_SCANNER_FLAG_SEEN_DESC": "Scanned e-mails will be marked as seen automatically.",
+    "BL_SCANNER_EXCEPTIONS": "Exceptions",
+    "FL_SCANNER_EMAIL_EXCEPTIONS": "E-mails",
+    "LBL_SCANNER_EMAIL_EXCEPTIONS_DESC": "Global list of e-mail addresses omitted from mail scanner actions.",
+    "FL_SCANNER_DOMAIN_EXCEPTIONS": "Domains",
+    "LBL_SCANNER_DOMAIN_EXCEPTIONS_DESC": "Global list of domains omitted from mail scanner actions."
   }
 }
