--- a/languages/en-US/Users.json
+++ b/languages/en-US/Users.json
@@ -419,7 +419,8 @@
     "LBL_GROUP_MEMBERS_CHANGE_VIEW": "Managing group members",
     "LBL_MEMBER": "Members",
     "LBL_GROUP_MEMBERS_ADD_VIEW": "Add group members",
-    "FL_WAPRO_USER": "WAPRO ERP User identifier"
+    "FL_WAPRO_USER": "WAPRO ERP User identifier",
+    "FL_MAIL_POPUP": "Open your mail client in a new window"
   },
   "js": {
     "JS_DELETE_USER_CONFIRMATION": "When a User is deleted, the user will be marked as \"Inactive\" and no new records can be assigned to the User, and the user will not be able to login. Are you sure you want to delete?",
