Improved inventory configuration

--- a/languages/en-US/Settings/LayoutEditor.json
+++ b/languages/en-US/Settings/LayoutEditor.json
@@ -118,10 +118,10 @@
     "LBL_NAME_FIELD": "Name",
     "LBL_COLSPAN": "Width [%]",
     "LBL_HEIGHT": "Height [px]",
-    "LBL_COMMENT_IS_OPENED": "Expanded",
-    "LBL_COMMENT_IS_OPENED_INFO": "Expanded by default.",
+    "LBL_COMMENT_IS_OPENED": "Expanded by default",
+    "LBL_COMMENT_IS_OPENED_INFO": "Record edit view.",
     "LBL_COMMENT": "Comment",
-    "LBL_INV_BLOCK_IS_OPENED": "Blocks expanded by default",
+    "LBL_INV_BLOCK_IS_OPENED": "Expanded by default",
     "LBL_INV_BLOCK_IS_OPENED_INFO": "Record edit view.",
     "LBL_INV_GROUP_LABEL_DESC": "It allows you to group rows and give them a header.",
     "LBL_SELECT_TYPE_OF_INVENTORY": "Select field type",
