--- a/languages/en-US/_Base.json
+++ b/languages/en-US/_Base.json
@@ -48,6 +48,7 @@
     "Discount Amount": "Discount amount",
     "Discount Percent": "Discount percent",
     "Discount": "Discount",
+    "LBL_MARKUP": "Markup",
     "Documents": "Documents",
     "Due Date & Time": "Due date & time",
     "Due Date": "Due date",
@@ -1000,7 +1001,7 @@
     "LBL_PRICE_BEFORE_DISCOUNT": "Price before discount",
     "LBL_DISCOUNT_IN_TOTAL": "Discount in total",
     "LBL_PRICE_AFTER_DISCOUNT": "Price after discount",
-    "LBL_DISCOUNT_MODE": "Discount in total",
+    "LBL_DISCOUNT_MODE": "Discount mode",
     "LBL_VALUE": "Value",
     "LBL_QUANTITY": "Quantity",
     "LBL_REFERENCE": "Reference",
