Added inclusion of sharing people in calendar notifications in calendar configuration.

--- a/languages/en-US/Settings/Calendar.json
+++ b/languages/en-US/Settings/Calendar.json
@@ -23,6 +23,7 @@
     "LBL_GENERATE_COLOR": "Generate random color",
     "LBL_GENERATED_COLOR": "Color generated",
     "LBL_NOTWORKING_DAYS": "Not working days",
+    "LBL_SHARING_PERSON": "Include sharing person in calendar notifications",
     "LBL_NOTWORKEDDAYS_INFO": "Not working days",
     "PLL_MONDAY": "Monday",
     "PLL_TUESDAY": "Tuesday",
@@ -39,5 +40,5 @@
   },
   "js": {
 
-  }
+}
 }
