--- a/languages/en-US/Settings/LayoutEditor.json
+++ b/languages/en-US/Settings/LayoutEditor.json
@@ -126,6 +126,8 @@
     "LBL_INV_GROUP_LABEL_DESC": "It allows you to group rows and give them a header.",
     "LBL_INV_DISCOUNT_MARKUP_MODE": "Default type",
     "LBL_INV_DISCOUNT_MARKUP_MODE_DESC": "Default setting of field working mode.",
+    "LBL_INV_UNITPRICE_CURRENCY_CONVERT": "Currency convert button",
+    "LBL_INV_UNITPRICE_CURRENCY_CONVERT_DESC": "A simple currency conversion button will be available next to the field.",
     "LBL_SELECT_TYPE_OF_INVENTORY": "Select field type",
     "LBL_NEXT": "Next",
     "LBL_PARAMS_MODULES": "Modules",
