--- a/languages/en-US/Settings/LayoutEditor.json
+++ b/languages/en-US/Settings/LayoutEditor.json
@@ -130,6 +130,7 @@
     "LBL_INV_UNITPRICE_CURRENCY_CONVERT_DESC": "A simple currency conversion button will be available next to the field.",
     "LBL_INV_GROUP_VALUES": "Available group values",
     "LBL_INV_GROUP_VALUES_DESC": "Entering a value in this field will change the displayed field to picklist.",
+    "LBL_INV_SUMMARY_ENABLED": "Summary enabled",
     "LBL_SELECT_TYPE_OF_INVENTORY": "Select field type",
     "LBL_NEXT": "Next",
     "LBL_PARAMS_MODULES": "Modules",
