--- a/languages/en-US/Settings/LayoutEditor.json
+++ b/languages/en-US/Settings/LayoutEditor.json
@@ -230,7 +230,8 @@
     "LBL_SAVE_AND_CLOSE": "Save and close",
     "MultiAttachment": "Attachments",
     "LBL_OWNER_FROM_ACCOUNT_CONTACT": "Assigned To from the Contact Account",
-    "LBL_SPECIAL_FUNCTION": "Special function"
+    "LBL_SPECIAL_FUNCTION": "Special function",
+    "MapCoordinates": "Map coordinates"
   },
   "js": {
     "JS_BLOCK_NAME_EXISTS": "Block Name already exists",
