--- a/languages/en-US/Locations.json
+++ b/languages/en-US/Locations.json
@@ -9,6 +9,7 @@
     "LBL_NUMBER": "Number",
     "LBL_CLOSED_TIME": "Closed time",
     "FL_PHONE": "Phone",
-    "FL_CAPACITY": "Capacity"
+    "FL_CAPACITY": "Capacity",
+    "FL_COORDINATES": "Co-ordinates"
   }
 }
