--- a/languages/en-US/Locations.json
+++ b/languages/en-US/Locations.json
@@ -10,6 +10,6 @@
     "LBL_CLOSED_TIME": "Closed time",
     "FL_PHONE": "Phone",
     "FL_CAPACITY": "Capacity",
-    "FL_COORDINATES": "Co-ordinates"
+    "FL_COORDINATES": "Coordinates"
   }
 }
