--- a/languages/en-US/_Base.json
+++ b/languages/en-US/_Base.json
@@ -1982,6 +1982,7 @@
     "JS_NEXT": "Next",
     "JS_CALENDAR_LIST": "Schedule",
     "JS_SPECIAL_CHARACTERS": "Special characters like",
-    "JS_NOT_ALLOWED": "are not allowed"
+    "JS_NOT_ALLOWED": "are not allowed",
+    "JS_INVALID_COORDINATES": "Wrong coordinates entered"
   }
 }
