--- a/languages/en-US/_Base.json
+++ b/languages/en-US/_Base.json
@@ -291,6 +291,9 @@
     "LBL_IMPORT": "Import",
     "LBL_IN": "in",
     "LBL_INDIVIDUAL": "Individual",
+    "LBL_INV_TAX_MODE_GLOBAL": "Global",
+    "LBL_INV_DISCOUNT_MODE_GLOBAL": "Global",
+    "LBL_INV_DISCOUNT_MODE_GROUP": "Group",
     "LBL_INVENTORY": "INVENTORY",
     "LBL_IS_EMPTY": "is empty",
     "LBL_IS_NOT_EMPTY": "is not empty",
