Added options to the new multi picklist tag field

--- a/languages/en-US/Settings/LayoutEditor.json
+++ b/languages/en-US/Settings/LayoutEditor.json
@@ -53,6 +53,7 @@
     "LBL_SUMMARY_FIELD": "Summary view",
     "LBL_WRONG_FIELD_TYPE": "Wrong field type",
     "MultiSelectCombo": "Multi-select combo box",
+    "MultipicklistTags": "Multi-select box (with added value)",
     "AdvPercentage": "Percent (Advanced)",
     "Percent": "Percent",
     "Phone": "Phone",
