--- a/languages/en-US/Settings/LayoutEditor.json
+++ b/languages/en-US/Settings/LayoutEditor.json
@@ -133,6 +133,8 @@
     "LBL_INV_GROUP_VALUES_DESC": "Entering a value in this field will change the displayed field to picklist.",
     "LBL_INV_SUMMARY_ENABLED": "Summary enabled",
     "LBL_INV_DEFAULT_VALUE": "Default mode",
+    "LBL_INV_CURRENCY_RESET": "Exchange rate reset",
+    "LBL_INV_CURRENCY_RESET_DESC": "Possibility to reset exchange rate settings (date, exchange rate). The parameter applies when there is more than one currency in the system.",
     "LBL_SELECT_TYPE_OF_INVENTORY": "Select field type",
     "LBL_NEXT": "Next",
     "LBL_PARAMS_MODULES": "Modules",
