The first part of the WooCommerce integration has been added

--- a/languages/en-US/_Base.json
+++ b/languages/en-US/_Base.json
@@ -1412,10 +1412,12 @@
     "LBL_DUPLICATE_FIELD_VALUE": "This '%s' already exists in this module.",
     "LBL_DUPLICATE_EAN": "This ean already exists in this module.",
     "FL_MAGENTO_SERVER": "Magento server",
+    "FL_MAGENTO_ID": "Magento Id",
+    "FL_WOOCOMMERCE_SERVER": "WooCommerce server",
+    "FL_WOOCOMMERCE_ID": "WooCommerce Id",
     "LBL_COMPLETE_FIELDS": "Complete fields",
     "LBL_DATA_FROM_RECORD": "Data from record",
     "LBL_DATA_FROM_SOURCE": "Data from source",
-    "FL_MAGENTO_ID": "Magento Id",
     "FL_CONTACT": "Contact",
     "FL_PAYMENTS_METHOD": "Payment method",
     "PLL_TRANSFER": "Bank transfer",
