--- a/languages/en-US/Other/EventHandler.json
+++ b/languages/en-US/Other/EventHandler.json
@@ -1,9 +1,9 @@
 {
   "php": {
     "CONTACTS_DUPLICATEEMAILCHECKER_HANDLER": "Email address duplicate validation",
-    "CONTACTS_DUPLICATEEMAILCHECKER_HANDLER_DESC": "Block record adding/editing when one of the entered email addresses already exists",
+    "CONTACTS_DUPLICATEEMAILCHECKER_HANDLER_DESC": "A validator that checks whether the address is unique in modules and all email type fields",
     "CONTACTS_PHONEDUPLICATECHECKER_HANDLER": "Phone number duplicate validation",
-    "CONTACTS_PHONEDUPLICATECHECKER_HANDLER_DESC": "Block record adding/editing when one of the entered phone already exists",
+    "CONTACTS_PHONEDUPLICATECHECKER_HANDLER_DESC": "A validator that checks whether the number is unique in modules and all phone number type fields",
     "ACCOUNTS_DUPLICATEVATID_HANDLER": "Duplicate VAT ID",
     "ACCOUNTS_DUPLICATEVATID_HANDLER_DESC": "Block record adding/editing when such VAT ID already exists",
     "PRODUCTS_DUPLICATEEAN_HANDLER": "Duplicate ean",
