--- a/languages/en-US/Products.json
+++ b/languages/en-US/Products.json
@@ -101,6 +101,7 @@
     "PLL_TYPE_SIMPLE": "Simple",
     "PLL_TYPE_GROUPED": "Grouped",
     "PLL_TYPE_VARIABLE": "Variable",
-    "PLL_TYPE_VARIATION": "Variation"
+    "PLL_TYPE_VARIATION": "Variation",
+    "LBL_CONFIRM_DELETE_WHEN_HAS_RELATION": "Record is related with other record, please confirm the action"
   }
 }
