--- a/languages/en-US/Home.json
+++ b/languages/en-US/Home.json
@@ -59,7 +59,7 @@
     "LIST_OF_LAST_UPDATED_RECORD": "List of last updated records",
     "Mails List": "Most recent emails",
     "Notebook": "Notepad",
-    "LBL_ROW_SUMMARY": "Row summary",
+    "LBL_ROW_SUMMARY": "Summary",
     "LBL_WIDGET_SHOW_ROWS_SUMMARY": "Show rows summary"
   }
 }
