--- a/languages/en-US/Settings/YetiForce.json
+++ b/languages/en-US/Settings/YetiForce.json
@@ -159,6 +159,8 @@
     "LBL_SHOP_YETIFORCERCNORTHDATA_INTRO": "Fetching data about companies North Data's company database",
     "LBL_SHOP_YETIFORCERCNORTHDATA_DESC": "Fetching data about companies North Data's company database\n\nCountry: Austria, France, Germany, Poland, Luxembourg, SPain, Switzerland, United Kingdom\nData provider: North Data https://www.northdata.com/ \nModules: Accounts, Leads, Vendors, Partners, Competition\nAutocomplete data in the record: Yes\nAdditional database access fee: No. Limits apply.\nAccount registration: Yes",
     "LBL_SHOP_YETIFORCEPBXBRIASOFTPHONE_INTRO": "Integration with the PBX via the Bria Softphone application",
-    "LBL_SHOP_YETIFORCEPBXBRIASOFTPHONE_DESC": "Integration with the PBX via the Bria Softphone application\nThe connection to Bria Softphone is based on the Bria Desktop API that allows the user to have real-time  information about the connections."
+    "LBL_SHOP_YETIFORCEPBXBRIASOFTPHONE_DESC": "Integration with the PBX via the Bria Softphone application\nThe connection to Bria Softphone is based on the Bria Desktop API that allows the user to have real-time  information about the connections.",
+    "LBL_SHOP_YETIFORCEWOOCOMMERCE_INTRO": "Integrate the YetiForce system with the WooCommerce e-commerce platform",
+    "LBL_SHOP_YETIFORCEWOOCOMMERCE_DESC": "YetiForce integrated with WooCommerce, one of the largest and most popular e-commerce platforms. This solution allows you to conduct centralized activities related to customer service and e-store orders straight from the CRM. It means that you will be able to communicate with clients, create all necessary documents related to orders."
   }
 }
