Added option of selecting sms provider in workflow task

--- a/languages/en-US/Settings/Workflows.json
+++ b/languages/en-US/Settings/Workflows.json
@@ -272,7 +272,8 @@
     "LBL_MANY_TO_MANY_RELATIONS": "Many to many relations",
     "LBL_ALL_ATTACHMENTS": "all attachments",
     "LBL_LATEST_ATTACHMENTS": "latest attachments",
-    "LBL_MEETING_URL": "Meeting URL"
+    "LBL_MEETING_URL": "Meeting URL",
+    "LBL_SMS_PROVIDER": "SMS provider"
   },
   "js": {
     "JS_SAME_FIELDS_SELECTED_MORE_THAN_ONCE": "Same fields selected more than once",
