Added support for multiple signatures

--- a/languages/en-US/Settings/MailSignature.json
+++ b/languages/en-US/Settings/MailSignature.json
@@ -2,7 +2,7 @@
   "php": {
     "MailSignature": "Email signature",
     "LBL_MAIL_SIGNATURE": "Email signature",
-    "LBL_MAIL_SIGNATURE_DESCRIPTION": "Configure outgoing mail servers",
+    "LBL_MAIL_SIGNATURE_DESCRIPTION": "Configure email signatures",
     "FL_NAME": "Name",
     "FL_DEFAULT": "Default",
     "FL_BODY": "Body",
