Added new relation type - Multi Reference (#17088)

--- a/languages/en-US/Settings/LayoutEditor.json
+++ b/languages/en-US/Settings/LayoutEditor.json
@@ -105,7 +105,8 @@
     "PLL_RELATED_LIST": "Many to many",
     "PLL_DEPENDENTS_LIST": "One to many",
     "PLL_ATTACHMENTS": "Attachments",
-    "PLL_PLL_MULTI_REFERENCE": "Related field M:M",
+    "PLL_EMAILS": "Email history",
+    "PLL_MULTI_REFERENCE": "Related field M:M",
     "PLL_SPLITED_RELATED_LIST": "Many to many - With separation of data",
     "PLL_ADD": "Add",
     "PLL_SELECT": "Select",
