Added of possibility of adding multiple team leaders

--- a/languages/en-US/Settings/Groups.json
+++ b/languages/en-US/Settings/Groups.json
@@ -12,7 +12,7 @@
     "Users": "Users",
     "Name": "Group name",
     "Description": "Description",
-    "FL_PARENT": "Team leader",
+    "FL_PARENT": "Team leaders",
     "LBL_ALLOWED_GROUP_NESTS_EXCEEDED": "The limit of allowed group nests has been exceeded.",
     "LBL_INDEFINITE_LOOP": "The current settings will create an indefinite loop. Please change group members.",
     "LBL_GROUP_DUPLICATE": "Duplicate",
