--- a/languages/en-US/Settings/Comarch.json
+++ b/languages/en-US/Settings/Comarch.json
@@ -5,6 +5,7 @@
     "LBL_COMARCH_DESCRIPTION": "Integration with the Comarch ERP",
     "LBL_URL": "API URL",
     "LBL_CONNECTOR": "Connector",
+    "LBL_CONNECTOR_TOOLTIP": "Comarch XL - API from elte-s.com was used for the integration",
     "LBL_USER_NAME": "Consumer Key",
     "LBL_PASSWORD": "Consumer Secret",
     "LBL_VERIFY_SSL": "Verify SSL",
@@ -22,6 +23,7 @@
     "LBL_PRODUCTS_LIMIT": "Products download limit",
     "LBL_DIR_API_TO_CRM": "One-way from Comarch to YetiForce",
     "LBL_DIR_CRM_TO_API": "One-way from YetiForce to Comarch",
-    "LBL_DIR_CRM_API": "Two-way"
+    "LBL_DIR_CRM_API": "Two-way",
+    "BTN_RECORD_INFO": "Show Comarch info and configuration"
   }
 }
