The next part of the Comarch integration

--- a/languages/en-US/Accounts.json
+++ b/languages/en-US/Accounts.json
@@ -79,6 +79,7 @@
     "LBL_ACCOUNTS_BY_INDUSTRY": "Accounts by industry",
     "Overdue Activities": "Overdue activities",
     "LBL_NEGLECTED_ACCOUNTS": "Neglected Accounts",
+    "LBL_COMARCH_BLOCK": "Comarch",
     "LBL_NEW_ACCOUNTS": "New Accounts",
     "FL_ACCOUNT_SECOND_NAME": "Account name 2",
     "FL_ACCOUNT_THIRD_NAME": "Account name 3",
