--- a/languages/en-US/_Base.json
+++ b/languages/en-US/_Base.json
@@ -1529,7 +1529,8 @@
     "LBL_CURRENCY_CONVERTER": "Currency converter",
     "LBL_OK": "Ok",
     "LBL_BATCH_ADDING_RECORDS": "Batch adding records",
-    "LBL_ATTACH_DOCUMENT_DESC": "When you select this option, it will attach PDF to the records. Send email action is omitted with this option"
+    "LBL_ATTACH_DOCUMENT_DESC": "When you select this option, it will attach PDF to the records. Send email action is omitted with this option",
+    "LBL_FILTER_EMPTY_VALUE": "Only empty values"
   },
   "js": {
     "JS_APPROVE": "Approve",
