--- a/languages/en-US/_Base.json
+++ b/languages/en-US/_Base.json
@@ -1417,6 +1417,7 @@
     "FL_WOOCOMMERCE_ID": "WooCommerce Id",
     "FL_COMARCH_SERVER": "Comarch server",
     "FL_COMARCH_ID": "Comarch Id",
+    "FL_COMARCH_LOG": "Comarch error log",
     "LBL_COMPLETE_FIELDS": "Complete fields",
     "LBL_DATA_FROM_RECORD": "Data from record",
     "LBL_DATA_FROM_SOURCE": "Data from source",
