--- a/languages/en-US/Settings/LayoutEditor.json
+++ b/languages/en-US/Settings/LayoutEditor.json
@@ -255,7 +255,8 @@
     "LBL_ALL_GROUPS": "All groups",
     "LBL_ALL_GROUPS_INFO": "When the option is not selected it displays only accessible groups based on the selected modules in the group panel",
     "Group": "Group",
-    "LBL_MULTI_REFERENCE_FIELDS": "Related field M:M"
+    "LBL_MULTI_REFERENCE_FIELDS": "Related field M:M",
+    "LBL_COLUMN_LENGTH": "Database column length"
   },
   "js": {
     "JS_BLOCK_NAME_EXISTS": "Block Name already exists",
@@ -292,6 +293,7 @@
     "JS_NOTIFY_COPY_TEXT": "Copied to clipboard",
     "JS_NOTIFY_COPY_TITLE": "Text",
     "JS_EXIST_PICKLIST_NAME": "This name is already used. Do you want to save it as shared picklist?",
-    "JS_ARE_YOU_SURE_YOU_WANT_TO_INACTIVE_FIELD": "Are you sure that you want to disable the field?"
+    "JS_ARE_YOU_SURE_YOU_WANT_TO_INACTIVE_FIELD": "Are you sure that you want to disable the field?",
+    "JS_COLUMN_LENGTH_CHANGE_WARNING": "Changing the column length depending on the database size may take a while. If you changed the column length, please make sure you want to continue this process."
   }
 }
