--- a/languages/en-US/Settings/Comarch.json
+++ b/languages/en-US/Settings/Comarch.json
@@ -21,6 +21,12 @@
     "LBL_SYNC_PRODUCTS": "Synchronize products",
     "LBL_DIRECTION_PRODUCTS": "Products synchronization direction",
     "LBL_PRODUCTS_LIMIT": "Products download limit",
+    "LBL_SYNC_INVOICES": "Synchronize invoices",
+    "LBL_DIRECTION_INVOICES": "Invoices synchronization direction",
+    "LBL_INVOICES_LIMIT": "Invoices download limit",
+    "LBL_SYNC_COR_INVOICES": "Synchronize correction invoices",
+    "LBL_DIRECTION_COR_INVOICES": "Correction invoices synchronization direction",
+    "LBL_COR_INVOICES_LIMIT": "Correction invoices download limit",
     "LBL_DIR_API_TO_CRM": "One-way from Comarch to YetiForce",
     "LBL_DIR_CRM_TO_API": "One-way from YetiForce to Comarch",
     "LBL_DIR_CRM_API": "Two-way",
